force-app/main/default/objects/Benefit_Order__c/Benefit_Order__c.object-meta.xml
<CustomObject>
    <description>A Gusto Health Benefit.</description>
    <label>Benefit Order</label>
    <nameField>
        <label>Benefit Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefit Orders</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>