force-app/main/default/objects/Benefit_Order__c/fields/Action_Necessary_Notes__c.field-meta.xml
<CustomField>
    <fullName>Action_Necessary_Notes__c</fullName>
    <description>Used by Benefit Transfer team</description>
    <label>Action Necessary Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>