force-app/main/default/objects/Benefit_Order__c/fields/Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>