force-app/main/default/objects/Benefit_Order__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(
  Closed__c,
  (End_Date__c - Start_Date__c),
  ABS((Start_Date__c - TODAY()))
  )</formula>
    <inlineHelpText>If Benefit Order is Open, the number of days since the start date, otherwise the number of days between the start and end dates.</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>