force-app/main/default/objects/Benefit_Order__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <description>Used by Benefit Transfer team</description>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Forms Signed</fullName>
            </value>
            <value>
                <fullName>Processing BoR with Carriers</fullName>
            </value>
            <value>
                <fullName>BoR Processed by All Carriers</fullName>
            </value>
            <value>
                <fullName>Implementing Plans</fullName>
            </value>
            <value>
                <fullName>Plans Implemented</fullName>
            </value>
            <value>
                <fullName>Pending Plan Confirmation</fullName>
            </value>
            <value>
                <fullName>Blocked Plan Confirmation</fullName>
            </value>
            <value>
                <fullName>Pending Eligibility Information</fullName>
            </value>
            <value>
                <fullName>Pending Missing Emails Information</fullName>
            </value>
            <value>
                <fullName>Pending Shareholders Information</fullName>
            </value>
            <value>
                <fullName>Pending Owners Information</fullName>
            </value>
            <value>
                <fullName>Plans Confirmed</fullName>
            </value>
            <value>
                <fullName>Employees Implemented</fullName>
            </value>
            <value>
                <fullName>Pending Employee Details Confirmation</fullName>
            </value>
            <value>
                <fullName>Employee Details Confirmed</fullName>
            </value>
            <value>
                <fullName>Blocked Employee Details Confirmation</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>BoR Complete</fullName>
            </value>
            <value>
                <fullName>Canceled/ Rescinded</fullName>
            </value>
            <value>
                <fullName>Forms Created</fullName>
            </value>
            <value>
                <fullName>Carriers Selected</fullName>
            </value>
            <value>
                <fullName>Closed Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>