force-app/main/default/objects/Benefit_Order__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <formula>IF(RecordType.Name=&apos;Change&apos;, &apos;Change&apos;, IF(RecordType.Name=&apos;New Plan&apos;, &apos;New Plan&apos;, IF(RecordType.Name=&apos;Renewal&apos;, &apos;Renewal&apos;, &apos;&apos;) ) )</formula>
    <label>Application Type</label>
    <type>Text</type>
</CustomField>