force-app/main/default/objects/Benefit_Order__c/fields/Assignment_Message__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Message__c</fullName>
    <description>Used by Benefit Transfer team</description>
    <label>Assignment Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>