force-app/main/default/objects/Benefit_Order__c/fields/Assignment_State__c.field-meta.xml
<CustomField>
    <fullName>Assignment_State__c</fullName>
    <description>Used this field in Flexible Workforce project, Role Assignment logic</description>
    <formula>if( Opportunity__r.UW_state__c!=null, Opportunity__r.UW_state__c, Opportunity__r.Account.BillingState)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment State</label>
    <type>Text</type>
</CustomField>