force-app/main/default/objects/Benefit_Order__c/fields/Authorized_Date__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Date__c</fullName>
    <description>Used by Benefit Transfer team</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Authorized Date</label>
    <type>Date</type>
</CustomField>