force-app/main/default/objects/Benefit_Order__c/fields/BoR_Date__c.field-meta.xml
<CustomField>
    <fullName>BoR_Date__c</fullName>
    <label>BoR Date</label>
    <type>Date</type>
</CustomField>