force-app/main/default/objects/Benefit_Order__c/fields/BoR_Id__c.field-meta.xml
<CustomField>
    <fullName>BoR_Id__c</fullName>
    <description>Used by Benefit Transfer team</description>
    <externalId>true</externalId>
    <label>BoR Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>