force-app/main/default/objects/Benefit_Order__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <formula>OR(
    ISPICKVAL(Order_Status__c,&apos;Fulfilled&apos;),
    ISPICKVAL(Order_Status__c,&apos;Denied&apos;),
    ISPICKVAL(Order_Status__c,&apos;Canceled&apos;),
    ISPICKVAL(Order_Status__c,&apos;Closed Lost&apos;),
    ISPICKVAL(Order_Status__c,&apos;Closed Admin&apos;)
)</formula>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>