force-app/main/default/objects/Benefit_Order__c/fields/Documents_Status__c.field-meta.xml
<CustomField>
    <fullName>Documents_Status__c</fullName>
    <description>This will hold &apos;rejected&apos;, &apos;all_uploaded&apos;, &apos;all_completed&apos; as the possible values. We get this value from HI platform</description>
    <label>Documents Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>all_uploaded</fullName>
                <label>All uploaded</label>
            </value>
            <value>
                <fullName>all_completed</fullName>
                <label>All completed</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>in_progress</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>