force-app/main/default/objects/Benefit_Order__c/fields/Does_group_require_OE__c.field-meta.xml
<CustomField>
    <fullName>Does_group_require_OE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does group require OE?</label>
    <type>Checkbox</type>
</CustomField>