force-app/main/default/objects/Benefit_Order__c/fields/Enrollment_Review_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Review_Sent_Date__c</fullName>
    <description>Used by Benefit Transfer team</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrollment Review Sent Date</label>
    <type>DateTime</type>
</CustomField>