force-app/main/default/objects/Benefit_Order__c/fields/Exception_Request__c.field-meta.xml
<CustomField>
    <fullName>Exception_Request__c</fullName>
    <formula>DATEVALUE(CreatedDate) &gt;= ( Coverage_Effective_Date__c - 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exception Request?</label>
    <type>Checkbox</type>
</CustomField>