force-app/main/default/objects/Benefit_Order__c/fields/External_Deductions_for_LiDi__c.field-meta.xml
<CustomField>
    <fullName>External_Deductions_for_LiDi__c</fullName>
    <description>Used by Benefit Transfer team</description>
    <label>External Deductions for LiDi</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>