force-app/main/default/objects/Benefit_Order__c/fields/Final_Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Extension_Date__c</fullName>
    <label>Final Extension Date</label>
    <type>Date</type>
</CustomField>