force-app/main/default/objects/Benefit_Order__c/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <description>Follow Up due date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Implementation Follow Up Date</label>
    <type>Date</type>
</CustomField>