force-app/main/default/objects/Benefit_Order__c/fields/Follow_Up_Notes__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Notes__c</fullName>
    <description>Detailed information for next steps</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Implementation Follow Up Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>