force-app/main/default/objects/Benefit_Order__c/fields/Funding_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Type__c</fullName>
    <description>Used to identify the funding type of the group for benefits</description>
    <formula>Text( Opportunity__r.Funding_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to identify the funding type of the group for benefits</inlineHelpText>
    <label>Funding Type</label>
    <type>Text</type>
</CustomField>