force-app/main/default/objects/Benefit_Order__c/fields/GDrive_Link__c.field-meta.xml
<CustomField>
    <fullName>GDrive_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GDrive Link</label>
    <type>Url</type>
</CustomField>