force-app/main/default/objects/Benefit_Order__c/fields/Has_TADA__c.field-meta.xml
<CustomField>
    <fullName>Has_TADA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has TADA</label>
    <type>Checkbox</type>
</CustomField>