force-app/main/default/objects/Benefit_Order__c/fields/Hippo_Link__c.field-meta.xml
<CustomField>
    <fullName>Hippo_Link__c</fullName>
    <description>Used by Benefit Transfer team</description>
    <formula>&apos;http://hippo.gusto.com/companies/&apos;&amp;Opportunity__r.Account.ZP_Company_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hippo Link</label>
    <type>Text</type>
</CustomField>