force-app/main/default/objects/Benefit_Order__c/fields/Is_Multi_EIN__c.field-meta.xml
<CustomField>
    <fullName>Is_Multi_EIN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Benefit Transfer team</description>
    <label>Is Multi-EIN</label>
    <type>Checkbox</type>
</CustomField>