force-app/main/default/objects/Benefit_Order__c/fields/Letters_sent_to_all_carriers__c.field-meta.xml
<CustomField>
    <fullName>Letters_sent_to_all_carriers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Benefit Transfer team</description>
    <label>Letters sent to all carriers?</label>
    <type>Checkbox</type>
</CustomField>