force-app/main/default/objects/Benefit_Order__c/fields/Maestro__c.field-meta.xml
<CustomField>
    <fullName>Maestro__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is marked as true to indicate that the onboarding will be serviced through the Maestro system in Hippo.</description>
    <label>Maestro</label>
    <type>Checkbox</type>
</CustomField>