force-app/main/default/objects/Benefit_Order__c/fields/No_Of_TADA_Carrier_Order__c.field-meta.xml
<CustomField>
    <fullName>No_Of_TADA_Carrier_Order__c</fullName>
    <description>Used by Benefit Transfer team</description>
    <label>No Of TADA Carrier Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>