force-app/main/default/objects/Benefit_Order__c/fields/Order_Fulfilled_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Order_Fulfilled_Timestamp__c</fullName>
    <description>Uses two workflows:
Order is Fulfilled
Order is Unfulfilled</description>
    <inlineHelpText>Timestamp when the Order Status moved to &apos;Fulfilled&apos;</inlineHelpText>
    <label>Order Fulfilled Timestamp</label>
    <type>DateTime</type>
</CustomField>