force-app/main/default/objects/Benefit_Order__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <description>Overall status of the Benefit Order.

The picklist values for the Order Status on the Benefit Order and the Implementation Stage on the Carrier Order must be kept in sync.</description>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed Admin</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Awaiting Routing</fullName>
            </value>
            <value>
                <fullName>With Sales</fullName>
            </value>
            <value>
                <fullName>With Advising</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Ready for Alignment</fullName>
            </value>
            <value>
                <fullName>Alignment Approved</fullName>
            </value>
            <value>
                <fullName>Alignment Denied</fullName>
            </value>
            <value>
                <fullName>Alignment Approved Post Renewal</fullName>
            </value>
            <value>
                <fullName>Ready for Qualification</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Ready for Intro</fullName>
            </value>
            <value>
                <fullName>Ready for Document Collection</fullName>
            </value>
            <value>
                <fullName>Collecting Documents</fullName>
            </value>
            <value>
                <fullName>Ready for Implementing Plans</fullName>
            </value>
            <value>
                <fullName>Implementing Plans</fullName>
            </value>
            <value>
                <fullName>Ready to Send Plan Review</fullName>
            </value>
            <value>
                <fullName>Plan Review Sent</fullName>
            </value>
            <value>
                <fullName>Plans Confirmed</fullName>
            </value>
            <value>
                <fullName>Blocked Plan Review</fullName>
            </value>
            <value>
                <fullName>Unblock Plan Review</fullName>
            </value>
            <value>
                <fullName>Enrollment Review Entry in Progress</fullName>
            </value>
            <value>
                <fullName>Ready to Send Enrollment Review</fullName>
            </value>
            <value>
                <fullName>Enrollment Review Sent</fullName>
            </value>
            <value>
                <fullName>Enrollment Confirmed</fullName>
            </value>
            <value>
                <fullName>Ready for OE Prep</fullName>
            </value>
            <value>
                <fullName>OE Prep</fullName>
            </value>
            <value>
                <fullName>OE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>