force-app/main/default/objects/Benefit_Order__c/fields/Parent_Benefit_Order__c.field-meta.xml
<CustomField>
    <fullName>Parent_Benefit_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Benefit Order</label>
    <referenceTo>Benefit_Order__c</referenceTo>
    <relationshipLabel>Benefit Orders</relationshipLabel>
    <relationshipName>Benefit_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>