force-app/main/default/objects/Benefit_Order__c/fields/Partner_Tier__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier__c</fullName>
    <formula>TEXT( Account__r.Sold_By__r.AM_Tier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Tier</label>
    <type>Text</type>
</CustomField>