force-app/main/default/objects/Benefit_Order__c/fields/Plan_Reviews_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Reviews_Sent_Date__c</fullName>
    <description>Used by Benefit Transfer team</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Plan Reviews Sent Date</label>
    <type>DateTime</type>
</CustomField>