force-app/main/default/objects/Benefit_Order__c/fields/Priority_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Priority_Reasons__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Priority Reasons</label>
    <length>100</length>
    <type>Text</type>
</CustomField>