force-app/main/default/objects/Benefit_Order__c/fields/Push_Rate_Reason__c.field-meta.xml
<CustomField>
    <fullName>Push_Rate_Reason__c</fullName>
    <label>Push Rate Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not enough EE enrolled</fullName>
            </value>
            <value>
                <fullName>Only owner(s) enrolled</fullName>
            </value>
            <value>
                <fullName>Too expensive/need more time to think about plans</fullName>
            </value>
            <value>
                <fullName>Not enough payroll history</fullName>
            </value>
            <value>
                <fullName>Unresponsive ER</fullName>
            </value>
            <value>
                <fullName>ER decided they’re not ready yet</fullName>
            </value>
            <value>
                <fullName>Problem with coverage area?/OOS EE</fullName>
            </value>
            <value>
                <fullName>Didn’t complete OE on time</fullName>
            </value>
            <value>
                <fullName>Want to make changes to selections</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Covid-19</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>