force-app/main/default/objects/Benefit_Order__c/fields/QA_Sheet__c.field-meta.xml
<CustomField>
    <fullName>QA_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populate QA Sheet lookup from opportunity record</description>
    <label>QA Sheet</label>
    <referenceTo>QA_Sheet__c</referenceTo>
    <relationshipLabel>Benefit Orders</relationshipLabel>
    <relationshipName>Benefit_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>