force-app/main/default/objects/Benefit_Order__c/fields/Qualification_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Follow_Up_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Qualification Follow Up Date</label>
    <type>Date</type>
</CustomField>