force-app/main/default/objects/Benefit_Order__c/fields/Qualification_Follow_Up_Notes__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Follow_Up_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Qualification Follow Up Notes</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>