force-app/main/default/objects/Benefit_Order__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <description>Used by Benefit Transfer team</description>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>