force-app/main/default/objects/Benefit_Order__c/fields/Renewal_Date_from_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date_from_Opportunity__c</fullName>
    <description>Renewal date pulled from opportunity</description>
    <formula>Opportunity__r.Renewal_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Date (from Opportunity)</label>
    <type>Date</type>
</CustomField>