force-app/main/default/objects/Benefit_Order__c/fields/Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>Status_Detail__c</fullName>
    <description>The picklist values for the Status Detail on the Benefit Order and the Carrier Order must be kept in sync.</description>
    <label>Order Status Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Order_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Carve out group</fullName>
            </value>
            <value>
                <fullName>Duplicate: Changed Carrier (Bundle Ancillary)</fullName>
            </value>
            <value>
                <fullName>Duplicate: Changed Carrier (ER Choice)</fullName>
            </value>
            <value>
                <fullName>Duplicate: Changed Carrier (Failed QA)</fullName>
            </value>
            <value>
                <fullName>Duplicate: Other</fullName>
            </value>
            <value>
                <fullName>Effective Date Not Supported</fullName>
            </value>
            <value>
                <fullName>Ineligible: Company not authorized in state</fullName>
            </value>
            <value>
                <fullName>Ineligible: Existing Carrier - Transferred to BOR Opportunity</fullName>
            </value>
            <value>
                <fullName>Ineligible: Husband/Wife Only</fullName>
            </value>
            <value>
                <fullName>Ineligible: Insufficient Payroll</fullName>
            </value>
            <value>
                <fullName>Ineligible: No eligible employees</fullName>
            </value>
            <value>
                <fullName>Ineligible: Not enough EE&apos;s in state</fullName>
            </value>
            <value>
                <fullName>Ineligible: No workers&apos; compensation</fullName>
            </value>
            <value>
                <fullName>Ineligible: Owner Only</fullName>
            </value>
            <value>
                <fullName>Ineligible: Unsupported State</fullName>
            </value>
            <value>
                <fullName>Nonpayment of premium under a previous policy</fullName>
            </value>
            <value>
                <fullName>Non-Responsive Employer</fullName>
            </value>
            <value>
                <fullName>Owner only group</fullName>
            </value>
            <value>
                <fullName>Participation: Ancillary Participation Not Met</fullName>
            </value>
            <value>
                <fullName>Participation: Medical Participation Not Met</fullName>
            </value>
            <value>
                <fullName>Participation rate not met</fullName>
            </value>
            <value>
                <fullName>Post Signature Cancel</fullName>
            </value>
            <value>
                <fullName>Post-Signature Cancel: Chose Competitor - Earlier Effective Date</fullName>
            </value>
            <value>
                <fullName>Post-Signature Cancel: Did Not Become Gusto Customer</fullName>
            </value>
            <value>
                <fullName>Post-Signature Cancel: No Longer Interested</fullName>
            </value>
            <value>
                <fullName>Post-Signature Cancel: Too Expensive</fullName>
            </value>
            <value>
                <fullName>Post Signature Ineligible</fullName>
            </value>
            <value>
                <fullName>Renewal: Switched to new broker</fullName>
            </value>
            <value>
                <fullName>Renewal: Carrier Canceled - Nonpayment</fullName>
            </value>
            <value>
                <fullName>Renewal: Carrier Canceled - Recertification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>