force-app/main/default/objects/Benefit_Order__c/fields/Submission_Deadline_Days__c.field-meta.xml
<CustomField>
    <fullName>Submission_Deadline_Days__c</fullName>
    <formula>Submission_Deadline__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission Deadline Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>