force-app/main/default/objects/Benefit_Order__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renewal Alignment</fullName>
            </value>
            <value>
                <fullName>New to Gusto</fullName>
            </value>
            <value>
                <fullName>Same carrier, plan/group level changes</fullName>
            </value>
            <value>
                <fullName>Same carrier, NO plan/group level changes</fullName>
            </value>
            <value>
                <fullName>Carrier switch</fullName>
            </value>
            <value>
                <fullName>New Line of Coverage</fullName>
            </value>
            <value>
                <fullName>TAdA: Pre OE Setup</fullName>
            </value>
            <value>
                <fullName>TAdA: No Pre OE Setup</fullName>
            </value>
            <value>
                <fullName>BOR + TAdA</fullName>
            </value>
            <value>
                <fullName>BOR</fullName>
            </value>
            <value>
                <fullName>BOR TAdA Only</fullName>
            </value>
            <value>
                <fullName>New to BYB - No OE</fullName>
            </value>
            <value>
                <fullName>New to BYB - OE</fullName>
            </value>
            <value>
                <fullName>Gusto to BYB - Renewal</fullName>
            </value>
            <value>
                <fullName>Gusto to BYB - Midyear</fullName>
            </value>
            <value>
                <fullName>BYB Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>