force-app/main/default/objects/Benefit_Order__c/fields/Unblocked_Date__c.field-meta.xml
<CustomField>
    <fullName>Unblocked_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unblocked Date</label>
    <type>Date</type>
</CustomField>