force-app/main/default/objects/Benefit_Order__c/fields/Useful_docs_in_attachments__c.field-meta.xml
<CustomField>
    <fullName>Useful_docs_in_attachments__c</fullName>
    <description>Used by Benefit Transfer team</description>
    <label>Useful docs in attachments?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>