force-app/main/default/objects/Benefit_Order__c/fields/UW_Owner__c.field-meta.xml
<CustomField>
    <fullName>UW_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Qualification Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Benefit_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>