force-app/main/default/objects/Benefit_Order__c/fields/ZP_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>ZP_Company_ID__c</fullName>
    <formula>Opportunity__r.Account.ZP_Company_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZP Company ID</label>
    <type>Text</type>
</CustomField>