force-app/main/default/objects/Benefit_Order__c/recordTypes/Change.recordType-meta.xml
<RecordType>
    <fullName>Change</fullName>
    <active>true</active>
    <description>A mid-term changes to an existing benefits package.</description>
    <label>Change</label>
</RecordType>