force-app/main/default/objects/Benefit_Order__c/recordTypes/Renewal.recordType-meta.xml
<RecordType>
    <fullName>Renewal</fullName>
    <active>true</active>
    <description>A renewal benefits order.</description>
    <label>Renewal</label>
</RecordType>