force-app/main/default/objects/Benefit_Order__c/validationRules/Complete_All_Cancellation_Steps_in_Hippo.validationRule-meta.xml
<ValidationRule>
    <fullName>Complete_All_Cancellation_Steps_in_Hippo</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(All_Cancellation_Steps_in_Hippo_Complete__c) , ISPICKVAL( Order_Status__c , &quot;Canceled&quot;), NOT( $User.Exempt_from_Validation_Rules__c ),OR( RecordType.Name = &quot;New Plan&quot;,RecordType.Name = &quot;Renewal&quot;, RecordType.Name = &quot;Change&quot;) )</errorConditionFormula>
    <errorMessage>If you have completed all steps in Hippo, mark ‘All Cancellation Steps in Hippo Completed’ as TRUE</errorMessage>
</ValidationRule>