force-app/main/default/objects/Benefit_Order__c/validationRules/Require_Additional_Details_for_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Additional_Details_for_Other</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Status_Detail__c),
ISPICKVAL(Status_Detail__c, &quot;Other&quot;),
ISBLANK(Additional_Details__c))</errorConditionFormula>
    <errorDisplayField>Additional_Details__c</errorDisplayField>
    <errorMessage>Please provide additional details for closing this Benefit Order.</errorMessage>
</ValidationRule>