force-app/main/default/objects/Benefit_Order__c/validationRules/Require_Blocked_Notes_If_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Blocked_Notes_If_Other</fullName>
    <active>true</active>
    <description>Require Blocked Notes when Benefit Order is Blocked and the Reason is Other.</description>
    <errorConditionFormula>Blocked__c &amp;&amp;
!Closed__c &amp;&amp;
ISPICKVAL(Blocked_Reason__c,&apos;Other&apos;) &amp;&amp;
ISBLANK(Blocked_Notes__c)</errorConditionFormula>
    <errorDisplayField>Blocked_Notes__c</errorDisplayField>
    <errorMessage>Please add additional details to Blocked Notes when the reason is Other.</errorMessage>
</ValidationRule>